# bark

./: .gitignore  Cargo.toml  LICENSE  README.md  rulefile
src/: change_distribution.rs  change_event.rs  file.rs  fs_change_distribution.rs  fs_changes.rs  fs_tree.rs  future_value.rs  glob.rs  gui.rs  input.rs  main.rs  path.rs  path_matcher.rs  provenance.rs  rules.rs
src/fs_change_distribution/: gui.rs  merge.rs
src/fs_changes/: gui.rs
src/fs_tree/: iter.rs
src/glob/: piece.rs
src/gui/: change_distribution.rs  change_event.rs  change_list.rs  file_filter.rs  rule_writing.rs  rules.rs  utils.rs
src/path_matcher/: best_variant.rs  case.rs  part.rs
src/rules/: kmeans.rs  storage.rs
