[package]
name = "bark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Input handling
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.95"
postcard = "1.0.4"

# Data model
time = { version = "0.3.20", features = ["macros", "parsing", "formatting"] }
sniff = { path = "/home/niclas/projects/sniff" }

# User interaction
structopt = "0.3.26"
eframe = "0.21.3"

# Utils
anyhow = "1.0.70"
glob-match = "0.2.1"
radix_trie = "0.2.1"
smallvec = "1.10.0"
