[package]
name = "bark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Input handling
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
postcard = "1.0.4"

# Data model
time = { version = "0.3.22", features = ["macros", "parsing", "formatting"] }
sniff = { path = "/home/niclas/projects/sniff" }
hashers = "1.0.1"
bitflags = "2.3.3"
statrs = "0.16.0"

# User interaction
structopt = "0.3.26"
eframe = { version = "0.22.0", features = ["wayland"] }

# Utils
anyhow = "1.0.71"
radix_trie = "0.2.1"
smallvec = { version = "1.10.0", features = ["serde"] }
inlinable_string = { version = "0.1.15", features = ["serde"] }
tempfile = "3.6.0"
rand = { version = "0.8.5", features = ["small_rng"] }
